[package]
name = "tune"
description = "Unified tuning engine for rscrypto algorithms"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = ["std"]
std = ["alloc", "platform/std", "backend/std", "checksum/std", "hashes/std"]
alloc = ["checksum/alloc"]

[dependencies]
platform = { workspace = true, default-features = false }
backend = { workspace = true, default-features = false }
checksum = { workspace = true, default-features = false }
hashes = { workspace = true, default-features = false }

[[bin]]
name = "rscrypto-tune"
path = "src/bin/rscrypto-tune.rs"
required-features = ["std"]

[lints]
workspace = true
