[package]
name = "tune"
description = "Unified tuning engine for rscrypto algorithms"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = ["std"]
std = ["alloc", "platform/std", "backend/std", "checksum/std", "hashes/std", "dep:serde", "dep:serde_json"]
alloc = ["checksum/alloc"]

[dependencies]
platform = { workspace = true, default-features = false }
backend = { workspace = true, default-features = false }
checksum = { workspace = true, default-features = false }
hashes = { workspace = true, default-features = false }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[[bin]]
name = "rscrypto-tune"
path = "src/bin/rscrypto-tune.rs"
required-features = ["std"]

[[bin]]
name = "rscrypto-blake3-boundary"
path = "src/bin/rscrypto-blake3-boundary.rs"
required-features = ["std"]

[lints]
workspace = true
