[package]
name = "rscrypto-fuzz-auth-hmac"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
rscrypto = { path = "../..", features = ["std", "hmac"] }
rscrypto_fuzz = { package = "rscrypto-fuzz-support", path = "../../fuzz/support" }
hmac = "0.13"
sha2 = "0.11"

[workspace]
members = ["."]

[[bin]]
name = "auth_hmac_sha256"
path = "fuzz_targets/auth_hmac_sha256.rs"
doc = false

[[bin]]
name = "auth_hmac_sha384"
path = "fuzz_targets/auth_hmac_sha384.rs"
doc = false

[[bin]]
name = "auth_hmac_sha512"
path = "fuzz_targets/auth_hmac_sha512.rs"
doc = false
