[package]
name = "rscrypto-fuzz-auth-pbkdf2"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
rscrypto = { path = "../..", features = ["std", "pbkdf2"] }
rscrypto_fuzz = { package = "rscrypto-fuzz-support", path = "../../fuzz/support" }
pbkdf2 = "0.13"
sha2_010 = { package = "sha2", version = "0.10.9" }

[workspace]
members = ["."]

[[bin]]
name = "auth_pbkdf2"
path = "fuzz_targets/auth_pbkdf2.rs"
doc = false
