[package]
name = "rscrypto-fuzz-auth-phc"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
rscrypto = { path = "../..", features = ["std", "argon2", "scrypt", "phc-strings"] }
rscrypto_fuzz = { package = "rscrypto-fuzz-support", path = "../../fuzz/support" }

[workspace]
members = ["."]

[[bin]]
name = "auth_phc"
path = "fuzz_targets/auth_phc.rs"
doc = false
