[package]
name = "rscrypto-fuzz-checksums-crc32"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
rscrypto = { path = "../..", features = ["std", "crc32"] }
rscrypto_fuzz = { package = "rscrypto-fuzz-support", path = "../../fuzz/support" }
crc = "3.4"

[workspace]
members = ["."]

[[bin]]
name = "checksum_crc32"
path = "fuzz_targets/checksum_crc32.rs"
doc = false
