[package]
name = "rscrypto-fuzz-fast-rapidhash"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
rscrypto = { path = "../..", features = ["std", "rapidhash"] }
rscrypto_fuzz = { package = "rscrypto-fuzz-support", path = "../../fuzz/support" }

[workspace]
members = ["."]

[[bin]]
name = "fast_rapidhash"
path = "fuzz_targets/fast_rapidhash.rs"
doc = false
